first commit - toe surgery section complete

--- a/derrmru-react-app/src/App.css
+++ b/derrmru-react-app/src/App.css
@@ -1,6 +1,61 @@
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 .App {
   text-align: center;
   width: 100%;
   margin: 0;
   padding: 0;
+}
+
+.startButton {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.startButton > button {
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 0;
+  border: none;
+  cursor: pointer;
+}
+
+/*fade in css animation*/
+.fade-in {
+  animation: fadeIn ease .8s;
+  -webkit-animation: fadeIn ease .8s;
+  -moz-animation: fadeIn ease .8s;
+  -o-animation: fadeIn ease .8s;
+  -ms-animation: fadeIn ease .8s;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+  
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+  
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+  
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+  
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
