generalised quote component

--- a/derrmru-react-app/src/App.css
+++ b/derrmru-react-app/src/App.css
@@ -16,7 +16,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-
 }
 
 .startButton > button {
@@ -29,33 +28,53 @@
 
 /*fade in css animation*/
 .fade-in {
-  animation: fadeIn ease .8s;
-  -webkit-animation: fadeIn ease .8s;
-  -moz-animation: fadeIn ease .8s;
-  -o-animation: fadeIn ease .8s;
-  -ms-animation: fadeIn ease .8s;
+  animation: fadeIn ease 0.8s;
+  -webkit-animation: fadeIn ease 0.8s;
+  -moz-animation: fadeIn ease 0.8s;
+  -o-animation: fadeIn ease 0.8s;
+  -ms-animation: fadeIn ease 0.8s;
 }
 @keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-  
+
 @-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-  
+
 @-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-  
+
 @-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-  
+
 @-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
